--- a/IliAs/res/layout/auswahlseminar.xml
+++ b/IliAs/res/layout/auswahlseminar.xml
@@ -33,7 +33,7 @@
     </ListView>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/kurs_abmeldung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/kurs_abmeldung" />
