--- a/res/layout/qr_layout.xml
+++ b/res/layout/qr_layout.xml
@@ -9,13 +9,12 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/qr_code_default" />
+        <FrameLayout
+    		android:layout_width="200dip"
+        	android:layout_height="200dip"
+ 			android:layout_gravity="center_horizontal">
+        <include layout="@layout/capture"/>
+        </FrameLayout>
 
     </RelativeLayout>
 
