änderung der übersicht für lastenheft

--- a/IliConnect/res/layout/uebersicht_layout.xml
+++ b/IliConnect/res/layout/uebersicht_layout.xml
@@ -13,11 +13,27 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:text="Termine"
+        android:text="TERMINE"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ListView
         android:id="@+id/listViewNotifications"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        >
+
+    </ListView>
+    
+    <TextView
+        android:id="@+id/textNewFiles"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:text="GEÄNDERTE DATEIEN"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ListView
+        android:id="@+id/listViewNewFiles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
