--- a/IliConnect/res/layout/schreibtisch_layout.xml
+++ b/IliConnect/res/layout/schreibtisch_layout.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:background="#E5F7F7"
-  >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#E5F7F7"
+    android:orientation="vertical" >
+
+
+
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:text="Schreibtisch"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+
+
 
     <ListView
-        android:id="@id/android:list"        
-        style="@style/ListView"        
-        android:layout_weight="1"        
-          >
-    </ListView>
-    
+        android:id="@id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
 </LinearLayout>
