--- a/IliConnect/res/xml/config.xml
+++ b/IliConnect/res/xml/config.xml
@@ -5,7 +5,7 @@
 			<autologin>false</autologin>
 			<user_id>root</user_id>
 			<password>homer</password>
-			<url_src>www.recruitment-specialist.de/xml/RemoteData.xml</url_src>
+			<url_src>http://swe.k3mp.de/ilias/xml.php</url_src>
 		</Authentification>
 		<Settings>
 			<sync>true</sync>
