--- a/IliConnect/res/layout/settings_layout.xml
+++ b/IliConnect/res/layout/settings_layout.xml
@@ -7,43 +7,47 @@
                         android:title="@string/sync_label"
                         android:defaultValue="false"
                         android:summary="Aktiviert die Synchronisation"
-                        android:key="checkboxPref" />
+                        android:key="checkboxPrefSync" 
+                        />
+                		
                 <ListPreference
                         android:title="@string/Sync_intervall"
                         android:summary="Stellen Sie hier das Synchronisationsintervall ein"
-                        android:key="listPref"
+                        android:key="listPrefInterv"
                         android:defaultValue="digiGreen"
                         android:entries="@array/array_intervall"
-                        android:entryValues="@array/array_intervall" />
+                        android:entryValues="@array/array_intervall_values" 
+                        
+                        />
                 <CheckBoxPreference
                         android:title="@string/Wlan_snyc"
                         android:defaultValue="false"
                         android:summary="Synchronisation nur über Wlan"
-                        android:key="checkboxPref" />                
+                        android:key="checkboxPrefWlanSync" />                
         </PreferenceCategory>
         <PreferenceCategory
                 android:title="Benachrichtigungen">
             <ListPreference
                         android:title="@string/dates_sync"
                         android:summary="Stellen Sie hier die Anzahl der Termine ein"
-                        android:key="listPref"
+                        android:key="listPrefNumNoti"
                         android:defaultValue="digiGreen"
                         android:entries="@array/array_termine"
                         android:entryValues="@array/array_termine" />
             <ListPreference
                         android:title="@string/Warning_sync"
                         android:summary=""
-                        android:key="listPref"
+                        android:key="listPrefWarning"
                         android:defaultValue="digiGreen"
                         android:entries="@array/array_warnung"
-                        android:entryValues="@array/array_warnung" />
+                        android:entryValues="@array/array_warnung_values" />
             <ListPreference
                         android:title="@string/Critical_sync"
                         android:summary=""
-                        android:key="listPref"
+                        android:key="listPrefCritical"
                         android:defaultValue="digiGreen"
                         android:entries="@array/array_Kritisch"
-                        android:entryValues="@array/array_Kritisch" />
+                        android:entryValues="@array/array_Kritisch_values" />
         </PreferenceCategory>
        
 </PreferenceScreen>
