--- a/IliConnect/res/layout/schreibtisch_layout.xml
+++ b/IliConnect/res/layout/schreibtisch_layout.xml
@@ -3,26 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#E5F7F7"
     android:orientation="vertical" >
-
-
-
-
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="60dp"
+        android:gravity="center"
         android:text="Schreibtisch"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-
-
-
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="30dp" />
+
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#EEE"
+        android:divider="@color/darkmint"
+        android:dividerHeight="1dp"
+        android:focusable="true" />
 
 </LinearLayout>
