--- a/IliConnect/res/layout/settings_layout.xml
+++ b/IliConnect/res/layout/settings_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#E5F7F7">
+    android:layout_width="wrap_content"
+    android:background="#E5F7F7" >
+
         <PreferenceCategory
                 android:title="Synchronisations Einstellungen">
                 <CheckBoxPreference
@@ -23,7 +25,14 @@
                         android:title="@string/Wlan_snyc"
                         android:defaultValue="false"
                         android:summary="Synchronisation nur über Wlan"
-                        android:key="checkboxPrefWlanSync" />                
+                        android:key="checkboxPrefWlanSync" />
+                
+                <CheckBoxPreference
+                        android:title="@string/Auto_Login"
+                        android:defaultValue="false"
+                        android:summary="Automatisch einloggen"
+                        android:key="checkboxPrefAutologin" />
+                
         </PreferenceCategory>
         <PreferenceCategory
                 android:title="Benachrichtigungen">
