rechtschreibung / array_values sind nicht parseable

--- a/IliConnect/res/layout/settings_layout.xml
+++ b/IliConnect/res/layout/settings_layout.xml
@@ -24,7 +24,7 @@
                 <CheckBoxPreference
                         android:title="@string/Wlan_snyc"
                         android:defaultValue="false"
-                        android:summary="Synchronisation nur über Wlan"
+                        android:summary="Synchronisation nur über WLAN"
                         android:key="checkboxPrefWlanSync" />
                 
                 <CheckBoxPreference
