changing default values of config.xml

--- a/IliConnect/res/xml/config.xml
+++ b/IliConnect/res/xml/config.xml
@@ -3,10 +3,10 @@
 	<Static>
 	    <Authentification>
 			<autologin>false</autologin>
-			<user_id>root</user_id>
-			<password>homer</password>
+			<user_id></user_id>
+			<password></password>
 			<!--<url_src>http://www.recruitment-specialist.de/xml/</url_src> -->
-						<url_src>http://swe.k3mp.de/ilias/</url_src>
+			<url_src>http://swe.k3mp.de/ilias/</url_src>
 		</Authentification>
 		<Settings>
 			<sync>true</sync>
