--- a/IliConnect/res/layout/item.xml
+++ b/IliConnect/res/layout/item.xml
@@ -3,34 +3,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp" 
-	>
-    <TextView
-        android:id="@+id/itemTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Titel"
-        android:textSize="20dp" />
+    android:padding="10dp" >
 
-    <TextView
-        android:id="@+id/itemDate"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        
-        android:text="Datum"
-        android:textColorHint="@color/darkmint"
-        android:textColorLink="@color/darkmint" />
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/itemDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description" />
+        <LinearLayout
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/itemType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Type" />
+            <TextView
+                android:id="@+id/itemTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Titel"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/itemDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Datum"
+                android:textColorHint="@color/darkmint"
+                android:textColorLink="@color/darkmint" />
+
+            <TextView
+                android:id="@+id/itemDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description" />
+
+            <TextView
+                android:id="@+id/itemType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Type" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/imageButton1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:visibility="gone"
+            android:src="@drawable/arrow" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
