--- a/IliConnect/res/layout/termine_layout.xml
+++ b/IliConnect/res/layout/termine_layout.xml
@@ -8,6 +8,8 @@
         android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:divider="@color/darkmint"
+        android:dividerHeight="1dp" />
 
 </LinearLayout>
