Anzeige Schreibtisch überarbeteitet

--- a/IliConnect/res/layout/item.xml
+++ b/IliConnect/res/layout/item.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/itemOwner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Type" />
+                android:text="Owner" />
         </LinearLayout>
 
     </LinearLayout>
