Geänderte Dateien: neues boolean Feld "changed" an Item

--- a/IliConnect/res/layout/uebersicht_layout.xml
+++ b/IliConnect/res/layout/uebersicht_layout.xml
@@ -17,7 +17,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ListView
-        android:id="@id/android:list"
+        android:id="@+id/listNotifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
