--- a/IliConnect/res/layout/schreibtisch_detail_layout.xml
+++ b/IliConnect/res/layout/schreibtisch_detail_layout.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="#E5F7F7">
-    
-     <TextView
+    android:layout_height="match_parent"
+    android:background="#E5F7F7"
+    android:orientation="vertical" >
+
+    <TextView
         android:id="@+id/courseName1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/courseName"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp" />
-        
-        <ListView
-            android:id="@+id/desktop_content"
-            style="@style/ListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_below="@+id/courseName1"
-            android:divider="@color/darkmint"
-            android:dividerHeight="1dp" >
 
+    <ListView
+        android:id="@+id/desktop_content"
+        style="@style/ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/darkmint"
+        android:dividerHeight="1dp" >
     </ListView>
-        
-</RelativeLayout>
+
+</LinearLayout>
