--- a/IliConnect/res/layout/schreibtisch_detail_layout.xml
+++ b/IliConnect/res/layout/schreibtisch_detail_layout.xml
@@ -13,7 +13,7 @@
         android:textSize="25sp" />
         
         <ListView
-        android:id="@+id/android:list"
+        android:id="@+id/desktop_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
