--- a/IliConnect/res/layout/schreibtisch_layout.xml
+++ b/IliConnect/res/layout/schreibtisch_layout.xml
@@ -13,6 +13,7 @@
         android:layout_weight="1"
         android:divider="@color/darkmint"
         android:dividerHeight="1dp"
+         style="@style/ListView"
         android:focusable="true" />
 
 </LinearLayout>
