--- a/IliConnect/res/layout/termine_layout.xml
+++ b/IliConnect/res/layout/termine_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:divider="@color/darkmint"
+         style="@style/ListView"
         android:dividerHeight="1dp" />
 
 </LinearLayout>
