--- a/IliConnect/res/drawable/list_selector_selected.xml
+++ b/IliConnect/res/drawable/list_selector_selected.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#E5F7F7">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/darkmint"/>
