--- a/IliConnect/res/layout/uebersicht_layout.xml
+++ b/IliConnect/res/layout/uebersicht_layout.xml
@@ -24,7 +24,7 @@
         <ListView
             android:id="@+id/listNotifications"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:divider="@color/darkmint"
             android:dividerHeight="1dp" >
@@ -34,9 +34,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" 
-        android:layout_weight="1" >
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textNewFiles"
@@ -50,7 +50,7 @@
         <ListView
             android:id="@+id/listViewNewFiles"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:divider="@color/darkmint"
             android:dividerHeight="1dp" >
