--- a/IliConnect/res/layout/uebersicht_layout.xml
+++ b/IliConnect/res/layout/uebersicht_layout.xml
@@ -4,13 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#E5F7F7"
+    android:clickable="false"
+    android:longClickable="false"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" 
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:clickable="false"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textView1"
@@ -26,8 +29,12 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:clickable="false"
             android:divider="@color/darkmint"
-            android:dividerHeight="1dp" >
+            android:dividerHeight="1dp"
+            android:listSelector="@android:color/transparent"
+            android:longClickable="false" >
+
         </ListView>
 
     </LinearLayout>
@@ -36,6 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:clickable="false"
+        android:longClickable="false"
         android:orientation="vertical" >
 
         <TextView
@@ -52,8 +61,12 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:clickable="false"
             android:divider="@color/darkmint"
-            android:dividerHeight="1dp" >
+            android:dividerHeight="1dp"
+            android:listSelector="@android:color/transparent"
+            android:longClickable="false" >
+
         </ListView>
 
     </LinearLayout>
