--- a/IliConnect/res/layout/uebersicht_layout.xml
+++ b/IliConnect/res/layout/uebersicht_layout.xml
@@ -32,7 +32,8 @@
             android:clickable="false"
             android:divider="@color/darkmint"
             android:dividerHeight="1dp"
-            android:listSelector="@android:color/transparent"
+            android:drawSelectorOnTop="false"
+            android:listSelector="#00000000"
             android:longClickable="false" >
 
         </ListView>
